Remove author sidebar and fix dropdown submenu visibility
- Set author_profile to false globally to remove left sidebar intro
- Fix overflow:hidden clipping the dropdown submenu on nav hover

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,6 +22,8 @@ search: false
 
 /* Inline dropdown nav */
 .greedy-nav .visible-links {
+  overflow: visible;
+
   li.masthead__menu-item--has-children {
     position: relative;
 
